# njord

./: LICENSE  README.md
njord_arduino/: platformio.ini  platformio_old.ini
njord_arduino/include/: board.h  commands.hpp  commandsHandlers.h  config.h  errors.h  messages.h  saver.h
njord_arduino/src/: board.cpp  commands.cpp  commandsHandlers.cpp  main.cpp  message.cpp  saver.cpp  storage.cpp
njord_backend/: Cargo.toml
njord_backend/src/: controller.rs  device.rs  lib.rs  sensors.rs
njord_backend/src/sensors_providers/: lhm_sensor.rs  mod.rs  nvml_sensor.rs  sys_info_sensor.rs
njord_gui/: bun.lockb  package-lock.json  package.json  tailwind.config.js
njord_gui/src/: App.tsx  const.ts
njord_gui/src-tauri/: Cargo.toml  tauri.conf.json
njord_gui/src-tauri/.cargo/: config.toml
njord_gui/src-tauri/src/: handlers.rs  lib.rs  main.rs  state.rs  storage.rs  utils.rs
njord_gui/src/api/: core.ts  device.ts  paths.ts  plugs.ts
njord_gui/src/components/: core-message-card.tsx  device-card.tsx  device-list.tsx  navbar.tsx  window-buttons.tsx
njord_gui/src/components/add-device/: add-device.tsx  device-setup.tsx  plugs-setup.tsx
njord_gui/src/components/device/: device-card.tsx  device-settings.tsx  plug-settings.tsx
njord_gui/src/components/device-setup/: device-setup.tsx  plugs-setup.tsx
njord_gui/src/components/plug-setup/: cooling-holder.tsx  dead_areas.tsx  plug-chart.tsx  plug-setup.tsx  sensor-select.tsx
njord_gui/src/context/: add-device.tsx  device.tsx  plug.tsx
njord_gui/src/store/: device.ts
njord_gui/src/types/: api.ts  device.ts  plugs.tsx  utils.ts
njord_gui/src/utils/: api.ts  errorWrapper.ts
