[package]
name = "njord_backend"
version = "0.1.0"
description = "Njord backend lib"
authors = ["olehpona"]
edition = "2021"

[dependencies]
serialport = "4.5.1"
thiserror = "2.0.3"
sysinfo = { version = "0.33.0", features = ["component"] }
nvml-wrapper = "0.10.0"
serde_json = "1.0.133"
serde = "1.0.216"
tokio = { version = "1.42.0", features = ["time"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14.0"
