[package]
name = "njord"
version = "0.1.0"
description = "Njord gui app"
authors = ["olehpona"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "njord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
njord_backend = { path = "../../njord_backend"}
tokio = { version = "1.42.0", features = ["time"] }
serde_json = "1"
